# humbug

./: .gitignore  .pylintrc  :q  AGENTS.docx  AGENTS.md  BLOCKQUOTE_FIXES_SUMMARY.md  BYTECODE_ERROR_HANDLING_PLAN.md  BYTECODE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  CURRENT_STATE_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  INTERRUPTION_FEATURE_SUMMARY.md  Makefile  README.md  ai-backend-model-config-learnings.md  aifpl_evaluator_missing_coverage.md  bank-netting-v1.cpp  benchmark_compiler.py  blueprint.md  build-dmg.sh  build-installer.bat  check-dependencies.py  check_nesting_tests.py  ci-constraints.txt  claude-uses-vi.txt  code.py  compile_and_test.sh  compiler_profile_stats.txt  conversation_tree_analysis.md  conversation_tree_implementation.js  debug_blockquote_nesting.py  debug_single_test.py  dependency-rules.yaml  editor_operations_proposal.md  fetch-menai-vm.py  file.txt  fred  fred.txt  (+36 more)
.github/workflows/: build-app.yml  checks.yml
.humbug/: settings.json
aifpl_modules/: README.md  math_utils.aifpl  string_utils.aifpl
conversations/: 2025-01-05-17-00-35-367.conv  2025-01-14-17-06-54-944.conv  2025-01-17-12-17-45-567.conv  2025-02-27-13-29-14-833.conv  2025-03-26-14-02-47-291.conv  2025-04-07-11-46-52-774.conv  2025-04-23-11-19-55-253.conv  2025-04-25-15-01-42-727.conv  2025-05-02-09-28-47-535.conv  2025-05-02-09-56-03-023.conv  2025-05-02-14-18-36-430.conv  2025-05-02-19-22-01-552.conv  2025-05-03-11-22-49-424.conv  2025-05-29-20-24-30-604.conv  2025-05-31-17-01-41-484.conv  2025-06-12-06-14-37-728.conv  2025-07-02-18-25-45-984.conv  2025-07-31-18-47-43-670.conv  2025-08-06-16-46-45-817.conv  2025-08-20-16-35-41-662.conv  2025-08-31-14-04-05-394.conv  2025-09-08-17-21-32-293.conv  2025-09-09-18-11-08-414.conv  2025-10-26-17-07-00-308.conv  2025-11-14-05-06-39-764.conv  2025-12-15-02-08-59-693.conv  2025-12-18-16-45-54-038.conv  2025-12-20-10-00-45-854.conv  2025-12-20-16-08-33-339.conv  2025-12-22-18-33-53-871.conv  2025-12-31-04-07-53-618.conv  2026-01-09-14-07-52-034.conv  2026-01-10-09-26-29-307.conv  2026-01-10-12-51-29-234.conv  2026-01-11-15-16-32-302.conv  2026-01-11-15-50-02-008.conv  2026-01-12-13-25-08-287.conv  2026-01-16-12-42-04-520.conv  2026-01-17-02-49-52-807.conv  2026-01-17-17-16-14-033-continue.conv  (+8 more)
conversations/saved/: 2025-03-25-17-29-12-698.conv  2025-04-07-11-56-47-137.conv  2025-04-23-22-54-36-666.conv  2025-05-03-11-21-45-345.conv  2025-05-03-11-23-06-920.conv  2025-05-12-14-09-54-074.conv  2025-05-13-09-46-21-546.conv  2025-05-13-10-04-31-919.conv  2025-05-21-10-42-33-945.conv  2025-05-24-17-42-35-868.conv  2025-06-04-09-31-08-214.conv  2025-06-10-12-12-02-242.conv  2025-06-12-11-07-03-347.conv  2025-06-30-07-15-01-347.conv  2025-06-30-13-36-02-797.conv  2025-07-01-13-23-31-510.conv  2025-07-09-20-20-38-337.conv  2025-07-24-19-44-57-814.conv  2025-07-29-13-57-39-655.conv  2025-08-12-11-01-37-434.conv  2025-08-12-16-52-16-413.conv  2025-08-13-14-07-56-445.conv  2025-08-19-18-13-40-451.conv  2025-08-26-06-53-04-082.conv  2025-08-29-15-45-22-835.conv  2025-08-29-17-23-49-676.conv  2025-08-29-18-42-15-721.conv  2025-08-31-12-43-06-734.conv  2025-09-08-16-59-40-699.conv  2025-09-08-18-05-50-245.conv  2025-11-12-04-41-01-913.conv  2025-11-14-18-28-15-199.conv  2025-11-15-05-35-54-117.conv  2025-12-09-18-36-59-528.conv  2025-12-10-01-55-27-321.conv  2025-12-10-04-16-02-709.conv  2025-12-18-14-42-39-017.conv  2025-12-18-14-49-08-624.conv  2025-12-18-15-16-22-361.conv  2025-12-19-16-42-13-932.conv  (+21 more)
docs/: context-model-handoff.md  conversation_bounce_investigation.md  docx-spacing-spec.md  markdown-testcard.md  test_code_blocks.docx  test_code_blocks.md  tool-migration-guide.md  user-ai-config.json
docs/user-manual/: 01-what-is-humbug.md  02-installation.md  03-first-conversation.md  04-mindspaces.md  05-tabs-and-columns.md  06-conversations.md  07-ai-models-and-backends.md  08-managing-files.md  09-editing-files.md  10-terminal.md  11-preview.md  12-git-diffs.md  13-searching.md  14-attachments.md  15-forking-conversations.md  16-delegation.md  17-user-settings.md  18-mindspace-settings.md  19-conversation-settings.md  20-keyboard-shortcuts.md  ai-models-and-backends.md  attachments.md  conversation-settings.md  conversations.md  delegation.md  editing-files.md  first-conversation.md  forking-conversations.md  git-diffs.md  humbug-shell.md  index.md  installation.md  keyboard-shortcuts.md  managing-files.md  mindspace-log.md  mindspace-settings.md  mindspaces.md  preview.md  searching.md  tabs-and-columns.md  (+4 more)
getting-started/metaphor/: Hello.m6r
icons/: Humbug.icns
metaphor/: aifpl-rules.m6r  capabilities.m6r  example-update-move.m6r  explore.m6r  humbug-expert.m6r  humbug.m6r  humbug2.m6r  implementation.m6r  introspect.m6r  mcp.m6r  python-rules.m6r  review.m6r  revise-tests.m6r  tab-conversation.m6r  tab-editor.m6r  tab-system.m6r  tab-terminal.m6r  tab-wiki.m6r  terminal.m6r  test.m6r  tool-calculator.m6r  tool-clock.m6r  tool-filesystem.m6r  update-tests.m6r  update.m6r
metaphor/guidelines/: generic-guide.m6r  python-guide.m6r  typescript-guide.m6r
metaphor/humbug/: capabilities.m6r  humbug.m6r  implementation.m6r  tab-shell.m6r  tab-wiki.m6r  tool-calculator.m6r  tool-clock.m6r  tool-filesystem.m6r
src/ai/: README.md  (+17 more)
tests/: conftest.py  test_parser_empty_binding.py
tools/: rename_higher_order.py  rename_humbug_to_desktop.py  run_all_tests_with_bytecode.py  run_one_test_with_bytecode.py  test_bytecode_compatibility.py
(+1859 files in other folders)
