[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humbug"
version = "0.9"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "certifi",
    "pyside6",
    "qasync"
]

[tool.coverage.run]
source = ["m6rclib"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError:"
]
[tool.hatch.build.targets.wheel]
packages = ["src/humbug"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pyinstaller]
excludes = ["build", "dist", "*.egg-info"]

[tool.pylint]
disable = [
    "R0801"
]

enable = [
    "protected-access"
]

# General configuration
max-line-length = 132
max-args = 5
max-attributes = 12

# Message control
output-format = "colorized"

[tool.pylint.master]
extension-pkg-whitelist = "PySide6"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/humbug --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]

