[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humbug"
version = "51"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "certifi",
    "pyside6",
    "qasync"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "types-PySide6",
    "pylint",
    "pyyaml",
    "pyinstaller",
    "pytest",
    "pytest-cov",
    "setuptools",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/menai/menai_value_c*",
    "src/menai/menai_vm_c*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise ImportError",
    "except ImportError:"
]

# Package discovery configuration
[tool.setuptools.packages.find]
where = ["src"]
include = ["desktop*"]

[tool.hatch.build.targets.wheel]
packages = [
    "src/desktop"
]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pyinstaller]
excludes = ["build", "dist", "*.egg-info"]

[tool.pylint]
disable = [
    "broad-exception-caught",
    "duplicate-code",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements"
]

enable = [
    "protected-access"
]

# General configuration
max-line-length = 132
max-args = 8
max-attributes = 12

# Message control
output-format = "colorized"

# Ensure we have docstrings for private methods as well as public ones
[tool.pylint.basic]
no-docstring-rgx = "^__.*__$"

[tool.pylint.main]
load-plugins = "tools.style_checker.humbug_style_checker"

[tool.pylint.master]
init-hook = "import sys, os; sys.path.insert(0, os.getcwd())"
extension-pkg-whitelist = "PySide6"

[tool.pylint.typecheck]
ignored-modules = ["PySide6.*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning"
]

